keep getting footer scrollbar and header/footer not in fixed position

--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,11 @@
 .App {
   text-align: center;
-  /* align-items: center; */
   font-family: 'Quicksand', sans-serif;
   background-color: white;
-  min-width: 100vw;
+  max-width: 99%;
   height: 100vh;
-  /* padding-right: 1rem; */
-  /* padding: 3rem; */
   display: grid;
-  grid-gap: .5vw;
+  /* grid-gap: .5vw; */
   grid-template-columns: 1fr 2fr;
   grid-template-areas:
     "header header"
@@ -44,9 +41,7 @@ h2 {
 
 .App-bio {
   position: relative;
-  /* top: 1rem; */
   grid-area: main;
-  /* padding: 2rem; */
   color: black;
 
 }
@@ -65,7 +60,7 @@ h2 {
 form {
   grid-area: form;
   position: relative;
-  /* font-size: 3rem; */
+  font-size: 3rem;
   margin: 0 1vw 1vw 1vw;
   width: 100%;
 }
@@ -79,12 +74,11 @@ form {
   max-height: 100%;
   display: flex;
   justify-content: space-evenly;
-  padding: 1vw 1vw 1vw 1vw;
+  padding: 1vw;
 
 }
 
 img {
-  /* width: 100%; */
   height: 100%;
 }
 
@@ -146,6 +140,7 @@ textarea:focus {
   text-align: center;
   font-size: 2vw;
   height: 1rem;
+  width: 99%;
 }
 
 .socialBtns {
@@ -157,14 +152,12 @@ textarea:focus {
   color: #61dafb;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 640px) {
   .App {
     padding: 0;
     margin: 0;
     display: flex;
     flex-flow: column nowrap;
-    width: 100%;
-    /* position: absolute; */
   }
 
   .App-header {
@@ -180,38 +173,32 @@ textarea:focus {
 
   .App-apps{
     top: inherit;
-    min-height: 20%;
-    width: 100%;
+    max-height: 20%;
+    max-width: 98%;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .Contact-form,
 form {
   margin:0px;
   padding: 0px;
+  font-size: 10px;
 }
 
   input[type=text] {
-    width: 80%;
     padding: 0;
     font-size: 2vw;
   }
   
   textarea {
     height: 50%;
-    width: 80%;
   }
 
   label{
     display: flex;
-    width: 100%;
-    /* max-height: 30%; */
     font-size: 10%;
-    /* margin: 0px;
-    padding: 0px; */
     justify-content: center;
-    /* align-content: center; */
   }
 
   .myBio {
@@ -225,6 +212,5 @@ form {
   .App-footer {
     position: relative;
     bottom: 0;
-    width: 100%
   }
 }
